feat: update appointment
