# be/api/router/appointment_routes.go
@@ -4,6 +4,7 @@ import (
 	"BE_Hospital_Management/api/handler/appointment"
 	"BE_Hospital_Management/api/middleware"
 	"BE_Hospital_Management/constant"
+
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
 )
@@ -11,4 +12,5 @@ import (
 func registerAppointmentRoutes(api *gin.RouterGroup, h *appointment.AppointmentHandler, db *gorm.DB) {
 	api.Use(middleware.ValidateAccessToken())
 	api.POST("/appointments", middleware.RequireAnyRole([]string{constant.RoleDoctor, constant.RolePatient}), h.CreateAppointment)
+	api.PATCH("/appointments/:id", middleware.RequireAnyRole([]string{constant.RolePatient}), h.UpdateAppointment)
 }
