# be/internal/domain/dto/appointment_info_request.go
@@ -11,3 +11,10 @@ type AppointmentInfoRequest struct {
 	FinishTime time.Time `json:"finish_time"`
 	Status     string    `json:"status" default:"scheduled"`
 }
+
+type UpdateAppointmentRequest struct {
+	DoctorUID  *int64    `json:"doctor_uid"`
+	BeginTime  time.Time `json:"begin_time"`
+	FinishTime time.Time `json:"finish_time"`
+	Status     string    `json:"status"`
+}
